--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="a">
     <div id="showm">show menu</div>
     <ul id="cpanel">
-	  <li>Fuel <span id="fuel">100</span> l</li>
+	  <li id='m1a'><div id="fuel">&nbsp;</div></li>
 	  <li>Altura <span id="altura">70</span> m</li>
       <li>Velocidad <span id="velocidad">100</span> m/s</li>  
     </ul>
