--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
 <body>
   <div id="nave"><img id='n' src="img/cohete.png" alt="img nave"></div>
   <div class="a">
-    <div id="showm">show menu</div>
-    <ul id="cpanel">
-	  <li id='m1a'><div id="fuel">&nbsp;</div></li>
-	  <li>Altura <span id="altura">70</span> m</li>
-      <li>Velocidad <span id="velocidad">100</span> m/s</li>  
-    </ul>
+    <div id="showm">show menu</div>    
+	<div id='m1a'><div id="fuel">&nbsp;</div></div>
+	<div id='m1b'><img src="img/altura2.png" alt="Altura"><div id="altura" class='numero'>70</div></div>
+    <div id='m1b'><img src="img/velocidad2.png" alt="Velocidad"><div id="velocidad" class='numero'>100</div></div>  
   </div>
   <div class="b">b</div>
   <div class="c">
     <div id="hidem">hide menu</div>
     <ul id="menu">
-      <li>Jugar</li>
-      <li>Instrucciones</li>
-      <li>Acerca de...</li>
+      <li id="c"><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></li>
+	  <li id="d"><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></li>
+	  <li id="e"><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></li>
     </ul>
   </div>
   <div class="luna"><img src="img/luna.png" alt="img luna.png"/></div>
