--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="a">
     <div id="showm">show menu</div>    
 	<div id='m1a'><div id="fuel">&nbsp;</div></div>
-	<div id='m1b'><img src="img/altura2.png" alt="Altura"><div id="altura" class='numero'>70</div></div>
-    <div id='m1b'><img src="img/velocidad2.png" alt="Velocidad"><div id="velocidad" class='numero'>100</div></div>  
+	<div id='m1b'><div id="altura" class='numero'>70</div><img src="img/altura2.png" alt="Altura"></div>
+    <div id='m1b'><div id="velocidad" class='numero'>100</div><img src="img/velocidad2.png" alt="Velocidad"></div>  
   </div>
   <div class="b">b</div>
   <div class="c">
