--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   
   <div class="c">  	            
-      <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></a></div>
+      <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></div>
       <div class='botonC' id="showm"><img src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
     <div class="menu">
@@ -27,7 +27,6 @@
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
 	  <div id='hidem'><img src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
-  </div>
   <div class="luna"><img src="img/luna.png" alt="img luna.png"/></div>
 </body>
 </html>
