--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
   <div id="nave"><img id='n' src="img/cohete.png" alt="img nave"></div>
   <div class="a">
-    <div id="showm">show menu</div>
-    <ul id="cpanel">
-	  <li id='m1a'><div id="fuel">&nbsp;</div></li>
-	  <li>Altura <span id="altura">70</span> m</li>
-      <li>Velocidad <span id="velocidad">100</span> m/s</li>  
-    </ul>
+       
+	<div class='m1a'><div id="fuel">&nbsp;</div></div>
+	<div class='m1b'><div id="altura" class='numero'>70</div><img src="img/altura2.png" alt="Altura"></div>
+    <div class='m1b'><div id="velocidad" class='numero'>100</div><img src="img/velocidad2.png" alt="Velocidad"></div>  
   </div>
-  <div class="b">b</div>
-  <div class="c">
-    <div id="hidem">hide menu</div>
-    <ul id="menu">
-      <li>Jugar</li>
-      <li>Instrucciones</li>
-      <li>Acerca de...</li>
-    </ul>
+  
+  <div class="c">  	            
+      <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></div>
+      <div class='botonC' id="showm"><img src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
+    <div class="menu">
+      <div class='botonMenu'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.3/lunar-landing-javascript-0.3/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></div>
+	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
+	  <div id='hidem'><img src="img/VOLVER.png" alt="Instrucciones"/></div>
+    </div>
   <div class="luna"><img src="img/luna.png" alt="img luna.png"/></div>
 </body>
 </html>
