--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="js/js.js"></script>
 </head>
 <body>
-  <div id="nave"><img id='n' src="img/cohete.png" alt="img nave"></div>
+  <div id="nave"><img id='n' src="img/cohete.png" alt="NAVE"></div>
   <div class="a">
        
 	<div class='m1a'><div id="fuel">&nbsp;</div></div>
@@ -27,6 +27,7 @@
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
 	  <div id='hidem'><img src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
-  <div class="luna"><img src="img/luna.png" alt="img luna.png"/></div>
+  <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
+  <div id='power'><img src="img/power2.png" alt="POWER"/></div>
 </body>
 </html>
