--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 	  <div id='hidem'><img src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
   <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
-  <div id='power'><img src="img/power2.png" alt="POWER"/></div>
+  <div><img id='power' src="img/power2.png" alt="POWER"/></div>
 </body>
 </html>
