--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   
   <div class="c">  	            
       <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></div>
-      <div class='botonC' id="showm"><img src="img/botonMenu.png" alt="Menu"/></div>           
+      <div class='botonC'><img id="showm" src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
     <div class="menu">
       <div class='botonMenu'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.3/lunar-landing-javascript-0.3/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
-	  <div id='hidem'><img src="img/VOLVER.png" alt="Instrucciones"/></div>
+	  <div><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
   <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
   <div><img id='power' src="img/power2.png" alt="POWER"/></div>
