--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class='botonC'><img id="showm" src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
     <div class="menu">
-      <div class='botonMenu'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.3/lunar-landing-javascript-0.3/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+      <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></div>
-	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
+	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
 	  <div><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
   <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
