--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 </head>
 <body>
   <div id="nave"><img id='n' src="img/cohete.png" alt="NAVE"></div>
-  <div class="a">
-       
+  <div class="a">       
 	<div class='m1a'><div id="fuel">&nbsp;</div></div>
 	<div class='m1b'><div id="altura" class='numero'>70</div><img src="img/altura2.png" alt="Altura"></div>
     <div class='m1b'><div id="velocidad" class='numero'>100</div><img src="img/velocidad2.png" alt="Velocidad"></div>  
-  </div>
-  
+  </div>  
   <div class="c">  	            
       <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></div>
       <div class='botonC'><img id="showm" src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
     <div class="menu">
-      <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+      <div class='botonMenu'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></div>
-	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
+	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
 	  <div><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
   <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
   <div><img id='power' src="img/power2.png" alt="POWER"/></div>
+  <div id='dificultad'>
+	<div id='facil'>FÁCIL</div>
+	<div id='dificil'>DIFÍCIL</div>
+  </div>
 </body>
 </html>
