--- a/index.html
+++ b/index.html
@@ -26,10 +26,19 @@
 	  <div><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
     </div>
   <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
-  <div><img id='power' src="img/power2.png" alt="POWER"/></div>
+  <div id='botonPower'><img id='power' src="img/power2.png" alt="POWER"/></div>
   <div id='dificultad'>
-	<div id='facil'>FÁCIL</div>
-	<div id='dificil'>DIFÍCIL</div>
+	Selecciona el nivel de dificultad para iniciar el juego<br>
+	<div class='botonDificultad'><img id='facil' src='img/botonFacil.png' alt='FACIL'/></div>
+	<div class='botonDificultad'><img id='dificil' src='img/botonDificil.png' alt='DIFICIL'/></div>
+  </div>
+  <div id='final1'>
+	Enhorabuena!<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
+	<div class='reiniciar'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+  </div>
+  <div id='final2'>
+	Te has estrellado<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
+	<div class='reiniciar'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
   </div>
 </body>
 </html>
