--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class='botonC'><img id="showm" src="img/botonMenu.png" alt="Menu"/></div>           
   </div>
     <div class="menu">
-      <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+      <div class='botonMenu'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/LM_PRACTICA3/master/instruccionesLunarLander.html'><img src="img/instrucciones1.png" alt="Instrucciones"/></a></div>
 	  <div class='botonMenu'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.1/index.html'><img src="img/dificultad1.png" alt="Dificultad"/></a></div>
 	  <div><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
@@ -34,11 +34,11 @@
   </div>
   <div id='final1'>
 	Enhorabuena!<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
-	<div class='reiniciar'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+	<div class='reiniciar'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
   </div>
   <div id='final2'>
 	Te has estrellado<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
-	<div class='reiniciar'><a href='https://rawgit.com/MariaAdrover/lunar-landing-javascript/v0.4/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
+	<div class='reiniciar'><a href='file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA4/v0.5/index.html'><img src="img/reiniciar1.png" alt="Reiniciar"/></a></div>
   </div>
 </body>
 </html>
