--- a/instrucciones.html
+++ b/instrucciones.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id='marco'>
 			<div id='objetivo'><br><b>OBJETIVO: Aterriza en la luna sin estrellarte.</b><br>Al cargar 
-			la página has de seleccionar el nivel de dificultad para empezar a jugar. Vigila la altura y el combustible de tu nave con los marcadores de la izquierda.<br>NIVEL FÁCIL: Aterriza a 3m/s o menos.<br>NIVEL DIFICIL: Aterriza a 3m/s o menos con la mitad de combustible. 
+			la página has de seleccionar el nivel de dificultad para empezar a jugar.<br>Vigila la altura y el combustible de tu nave con los marcadores de la izquierda.<br>NIVEL FÁCIL: Aterriza a 3m/s o menos.<br>NIVEL DIFICIL: Aterriza a 3m/s o menos con la mitad de combustible. 
 			¡Cuidado, la nave irá más rápido!<br></div>		
 			<div class='icono' id='cambiar'><img src="img/cambiar.png" alt="Elige Nave"/> Elige tu nave.</div>	  
 			<div class='icono' id='power'><img src="img/powerON.png" alt="motor"/> Activa o desactiva el motor de la nave si tienes combustible.<br> En PC también puedes utilizar la tecla ESPACIO. Mientras la mantengas pulsada el motor estará encendido.<br></div>				  
