--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</div>
     </div>
 	<div id='contador3'>3</div>
+	<div id='warning'>¡SIN COMBUSTIBLE!</div>
     <div id='final1'>
 		<br>¡Enhorabuena!<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
 		<div class='reiniciar'><img src="img/reiniciar1.png" alt="Reiniciar"/></div>
