--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
     <div id='botonPower'><img id='power' src="img/powerOFF.png" alt="POWER"/></div>
     <div id='dificultad'>
-		<div id='bloque1'><br><b>Aterriza a 3m/s o menos para no estrellarte</b><br></div>
+		<div id='bloque1'><br><b>Aterriza sin estrellarte</b><br></div>
 		<div class='icono'><img src="img/musicOn.png" alt="motor"/> Activa o desactiva el sonido</div>		
 	    <div class='icono'><img src="img/cambiar.png" alt="Elige Nave"/> Elige tu nave</div> 	    	  
 		<div class='icono'><img src="img/botonMenu.png" alt="Menu"/> Instrucciones/Pausa</div>
