--- a/instrucciones.html
+++ b/instrucciones.html
@@ -15,7 +15,7 @@
 			la página has de seleccionar el nivel de dificultad para empezar a jugar.<br>Vigila la altura y el combustible de tu nave con los marcadores de la izquierda.<br>NIVEL FÁCIL: Aterriza a 3m/s o menos.<br>NIVEL DIFICIL: Aterriza a 2m/s o menos con la mitad de combustible. 
 			¡Cuidado, la nave irá más rápido!<br></div>		
 			<div class='icono' id='cambiar'><img src="img/cambiar.png" alt="Elige Nave"/> Elige tu nave.</div>	  
-			<div class='icono' id='power'><img src="img/powerON.png" alt="motor"/> Activa o desactiva el motor de la nave si tienes combustible.<br> En PC también puedes utilizar la tecla ESPACIO. Mientras la mantengas pulsada el motor estará encendido.<br></div>				  
+			<div class='icono' id='power'><img src="img/powerON.png" alt="motor"/> Activa o desactiva el motor de la nave si tienes combustible. En PC también puedes utilizar la tecla ESPACIO. Mientras la mantengas pulsada el motor estará encendido.<br></div>				  
 			<div class='icono' id='menu'><img src="img/botonMenu.png" alt="Menu"/> Despliega el menú durante el juego.<br> Desde ahí podrás reiniciar o volver al juego y consultar la página de instrucciones.</div>
 			<div class='icono' id='music'><img src="img/musicOn.png" alt="música"/> Activa o desactiva el sonido. Si estás usando un móvil tendrás que pulsar dos veces el icono al cargar la página.</div>
 			<div class='icono'><img src="img/about.png" alt="about"/> Para saber más sobre el juego...</div>
