--- a/index.html
+++ b/index.html
@@ -1,69 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lunar Lander</title>
-    <meta name="description" content="Juego de naves">
+	<title>PortadaFormulari</title>
+    <meta name="description" content="Portada">
     <meta charset='UTF-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' media='screen and (min-width: 771px)' href='css/d.css'>
-    <link rel='stylesheet' media='screen and (max-width: 770px)' href='css/m.css'>
-    <script src="js/js.js"></script>
+    <link rel='stylesheet' type="text/css" media='screen and (min-width: 771px)' href='css/escritorio.css'>
+    <link rel='stylesheet' type="text/css" media='screen and (max-width: 770px)' href='css/movil.css'>
 </head>
 <body>
-    <div id="nave"><img id='n' src="img/cohete.png" alt="NAVE"></div>
-    <div class="a">       
-		<div class='m1a'><div id="fuel">&nbsp;</div></div>
-		<div class='m1b'><div id="altura" class='numero'>70</div><img src="img/altura2.png" alt="Altura"></div>
-		<div class='m1b'><div id="velocidad" class='numero'>0</div><img src="img/velocidad2.png" alt="Velocidad"></div>  
-	</div>  
-	<div class="c">  	            
-        <div class='botonC' id='cambiarNave'><img src="img/cambiar.png" alt="Cambiar de nave"/></div>
-        <div class='botonC'><img id="showm" src="img/botonMenu.png" alt="Menu"/></div>           
-    </div>
-    <div class="menu">
-        <div class='reiniciar' id='botonMenu1'><img src="img/reiniciar1.png" alt="Reiniciar"/></div>
-	    <div class='aviso' id='botonMenu2'><img src="img/instrucciones1.png" alt="Instrucciones"/></div>
-	    <div id='botonMenu3'><img id='hidem' src="img/VOLVER.png" alt="Instrucciones"/></div>
-    </div>
-	<div><img id='musicOn' src="img/musicOn.png" alt="musicOn"/></div>
-	<div><img id='musicOff' src="img/musicOff.png" alt="musicOff"/></div>
-	<div class='aviso'><img id='about' src="img/about.png" alt="about"/></div>
-    <div class="luna"><img src="img/luna.png" alt="LUNA"/></div>
-    <div id='botonPower'><img id='power' src="img/powerOFF.png" alt="POWER"/></div>
-    <div id='dificultad'>
-		<div id='bloque1'><br><b>Aterriza sin estrellarte</b><br></div>
-		<div class='icono'><img src="img/musicOn.png" alt="motor"/> Activa o desactiva el sonido</div>		
-	    <div class='icono'><img src="img/cambiar.png" alt="Elige Nave"/> Elige tu nave</div> 	    	  
-		<div class='icono'><img src="img/botonMenu.png" alt="Menu"/> Instrucciones/Pausa</div>
-		<br><b>Selecciona el nivel de dificultad para iniciar el juego</b><br>
-		<div id='bloque3'>
-			<div class='botonDificultad'><img id='facil' src='img/botonFacil.png' alt='FACIL'/></div>
-			<div class='botonDificultad'><img id='dificil' src='img/botonDificil.png' alt='DIFICIL'/></div>
-		</div>
-    </div>
-	<div id='contador3'>3</div>
-	<div id='warning'>¡SIN COMBUSTIBLE!</div>
-    <div id='final1'>
-		<br>¡Enhorabuena!<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
-		<div class='reiniciar'><img src="img/reiniciar1.png" alt="Reiniciar"/></div>
-    </div>
-    <div id='final2'>
-		<br>¡Te has estrellado!<br>Has aterrizado a <span class='velFinal'>0</span>m/s<br>Pulsa en el botón si quieres volver a jugar
-		<div class='reiniciar'><img src="img/reiniciar1.png" alt="Reiniciar"/></div>
-    </div>
-	<div class='ad' id='adINSTRUCCIONES'>
-		Si pulsas SI saldrás del juego e irás a la página de INSTRUCCIONES. ¿Quieres salir?
-		<div>
-			<div class='si' ><img id='siINS' src='img/si.png' alt='SI'/></div>
-			<div class='no' ><img id='noINS' src='img/no.png' alt='NO'/></div>
-		</div>
+	<div id = 'img1'><img src='img/l.png'/></div>
+	<div id = 'img2'><img src='img/l.png'/></div>
+	<div id = 'logo'>APRENDE A CONDUCIR</div>
+	<div id = 'img3'><img src='img/img3.png'/></div>
+	<div id = 'cabecera'></div>
+	<ul id = 'barra'>
+		<li><a href="file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA5/index.html">INSTRUCCIONES</a></li>
+		<li><a href="file:///C:/Users/miaad/Desktop/Llenguatge%20de%20marques/LM_PRACTICA5/formulari.html">EXAMEN</a></li>
+	</ul>
+	<div id='infoMarco'>
+		<h1>INSTRUCCIONES</h1>
+		<div id = 'info'>
+		instrucciones sdvnlkav vklkajsdvn cjksdvnsdjkvnknalsjdcjnljnlkjnkn
+		kjnsdvkjnslkdvnkjsvnñsvnñsjnvkjllnvkñj
+			<video width="320" height="240" controls>
+				<source src="yes_no.mp4" type="video/mp4">
+				<source src="movie.ogg" type="video/ogg">
+				Your browser does not support the video tag.
+			</video>
+		</div>	
 	</div>
-	<div class='ad' id='adABOUT'>
-		Si pulsas SI saldrás del juego e irás a la página de ABOUT. ¿Quieres salir?
-		<div>
-			<div class='si' ><img id='siAB' src='img/si.png' alt='SI'/></div>
-			<div class='no' ><img id='noAB' src='img/no.png' alt='NO'/></div>
-		</div>
-	</div>
+	<div id = 'pie'>&#169;2018 Maria Adrover</div>
 </body>
 </html>
